--- a/CostCalculatorForReadyMeals/style.css
+++ b/CostCalculatorForReadyMeals/style.css
@@ -1,39 +1,36 @@
 #headerCostCalculatorForReadyMeals {
-        text-align: center;
-        background: darkred;
-        padding: 5px;
-        font-size: 32px;
-        font-family: Georgia;
-        color: white;
-    }
-    
-    #bodyCostCalculatorForReadyMeal {
-        border: 1px lightgrey solid;
-        padding: 5px;
-    }
-    
-    #bodyCostCalculatorForReadyMeal span {
-        padding: 5px;
-    }
-    
-    table {
-        width: 100%;
-    }
-    
-    table th:first-child {
-        text-align: left;
-    }
-    
-    table td:first-child {
-        text-align: left;
-    }
-    
-    th,
-    tr,
-    td {
-        border: 1px dotted grey;
-        padding: 5px;
-        text-align: center;
-        font-family: Georgia;
-        font-size: 28px;
-    }
+    text-align: center;
+    background: darkred;
+    padding: 5px;
+}
+
+#headerCostCalculatorForReadyMeals {
+    color: white;
+}
+
+#bodyCostCalculatorForReadyMeal span {
+    padding: 5px;
+}
+
+table {
+    width: 100%;
+}
+
+table th:first-child {
+    text-align: left;
+    padding-left: 5px;
+}
+
+table td:first-child {
+    text-align: left;
+    padding-left: 5px;
+}
+
+th,
+tr,
+td {
+    border: 1px dotted grey;
+    text-align: center;
+    padding: 2px;
+    word-wrap: break-word;
+}
